--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Pitch Preview</title>
+
+  <!-- CSS -->
+  <link href="/static/css/bootstrap/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/css/forms.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+
+
 <div class="container-fluid">
     <div class="row no-gutter">
       <div class="d-none d-md-flex col-md-4 col-lg-6 bg-image"></div>
@@ -8,6 +30,10 @@
               <div class="col-md-9 col-lg-8 mx-auto">
                 <h3 class="login-heading mb-4">Signup</h3>
                 <form>
+                  <div class="form-label-group">
+                    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                    <label for="inputEmail">Username</label>
+                  </div>
                   <div class="form-label-group">
                     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
                     <label for="inputEmail">Email address</label>
@@ -32,4 +58,17 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>   
+  
+  <script src="/static/css/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="/static/js/jquery-3.3.1.min.js"></script>
+  </body>
+  </body>
+ </html>
+ 
+
+
+  
+  
+
+  
